[package]
name = "my_server"
version = "0.1.0"
edition = "2021"
default-run = "my_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.1", features = ["termination"] }
native-tls = "0.2.11"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"

